--- a/bwapi/DocumentationGen/DocumentationGen.vcxproj.filters
+++ b/bwapi/DocumentationGen/DocumentationGen.vcxproj.filters
@@ -18,9 +18,21 @@
     <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="helpers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="unittypes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="colortypes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
