#421 Added seed_override to the BWAPI config.

--- a/Release_Binary/Starcraft/bwapi-data/bwapi.ini
+++ b/Release_Binary/Starcraft/bwapi-data/bwapi.ini
@@ -123,5 +123,15 @@ height = 480
 [starcraft]
 ; Game sound engine = ON | OFF
 sound = ON
+
 ; Screenshot format = gif | pcx | tga | bmp
 screenshots = gif
+
+; Random seed override. This uses a fixed seed at the start of the game so that if played out the exact same way,
+; the same occurrences will happen every time. This value must be a decimal integer.
+;
+; When this key is commented out, Starcraft will use the system time as a seed. This is the default behaviour.
+;
+; Note: This option affects both single AND multi-player modes (for game hosts only). This means that hosting a multi-player
+; game with this option enabled will distribute this fixed seed to all other players in the game.
+;seed_override = 123456789
