Removed various windows header dependencies.
Disabled MSVC language extensions in DevAIModule, ExampleAIModule,
ExampleTournamentModule, and PKLib. Fixed release mode SVNRevGen as a tool.

--- a/bwapi/DevAIModule/DevAIModule.vcxproj
+++ b/bwapi/DevAIModule/DevAIModule.vcxproj
@@ -52,6 +52,7 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
+      <DisableLanguageExtensions>true</DisableLanguageExtensions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -75,6 +76,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
+      <DisableLanguageExtensions>true</DisableLanguageExtensions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
