--- a/bwapi/ExampleTournamentModule/ExampleTournamentModule.vcxproj
+++ b/bwapi/ExampleTournamentModule/ExampleTournamentModule.vcxproj
@@ -58,6 +58,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
+      <DisableLanguageExtensions>true</DisableLanguageExtensions>
     </ClCompile>
     <PreLinkEvent />
     <Link>
