--- a/bwapi/ExampleAIClient/ExampleAIClient.vcxproj
+++ b/bwapi/ExampleAIClient/ExampleAIClient.vcxproj
@@ -52,6 +52,7 @@
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
+      <DisableLanguageExtensions>true</DisableLanguageExtensions>
     </ClCompile>
     <PreLinkEvent />
     <Link>
@@ -73,6 +74,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <DisableLanguageExtensions>true</DisableLanguageExtensions>
     </ClCompile>
     <PreLinkEvent />
     <Link>
