--- a/bwapi/BWAPIClient/BWAPIClient.vcxproj.filters
+++ b/bwapi/BWAPIClient/BWAPIClient.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="..\include\BWAPI\Client\UnitImpl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Convenience.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
