#497 Added a speed_override config option.

--- a/Release_Binary/Starcraft/bwapi-data/bwapi.ini
+++ b/Release_Binary/Starcraft/bwapi-data/bwapi.ini
@@ -135,3 +135,8 @@ screenshots = gif
 ; Note: This option affects both single AND multi-player modes (for game hosts only). This means that hosting a multi-player
 ; game with this option enabled will distribute this fixed seed to all other players in the game.
 ;seed_override = 123456789
+
+; Speed override. This overrides the default game speed setting and prevents bots from changing the game speed.
+; Enabling this option causes it to take effect. The value is the number of milliseconds per frame. A negative
+; value uses the game's default speed value.
+;speed_override = -1
