Fixed a major arithmetic issue in canBuildHere.
Fixes issue 537.
Made Position operator bool explicit.
Inlined various Position definition macros.
Added some Position test cases.
Overloaded wostream and wistream operators for Types and Positions.

--- a/bwapi/BWAPILIBTest/BWAPILIBTest.vcxproj.filters
+++ b/bwapi/BWAPILIBTest/BWAPILIBTest.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="unitTypesTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="positionTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
