#463 Added HP/Shield/Energy regeneration rates.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Release_Pipeline
 Debug_Pipeline
 *.swp
 *.bak
+cppcheck.xml
 
 Release_Binary/AIModuleLoader
 Release_Binary/Chaoslauncher/Plugins/BWAPI_*
