--- a/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
+++ b/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
@@ -70,30 +70,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CSprite.cs" />
-    <Compile Include="CUnit.cs" />
+    <Compile Include="BW\CSprite.cs" />
+    <Compile Include="BW\CUnit.cs" />
+    <Compile Include="Enums\UnitMovementFlags.cs" />
+    <Compile Include="Enums\UnitStatusFlags.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Order.cs" />
-    <Compile Include="Position.cs" />
+    <Compile Include="Enums\Order.cs" />
+    <Compile Include="BW\Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertyGridExtension.cs" />
-    <Compile Include="PropertyGridInitialExpandedAttribute.cs" />
-    <Compile Include="Rect.cs" />
+    <Compile Include="PropertyGrid\FlagEnumEditor.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="PropertyGrid\PropertyGridExtension.cs" />
+    <Compile Include="PropertyGrid\PropertyGridInitialExpandedAttribute.cs" />
+    <Compile Include="BW\Rect.cs" />
     <Compile Include="Sprite.cs" />
-    <Compile Include="SpriteType.cs" />
-    <Compile Include="Target.cs" />
-    <Compile Include="TechType.cs" />
+    <Compile Include="Enums\SpriteType.cs" />
+    <Compile Include="BW\Target.cs" />
+    <Compile Include="Enums\TechType.cs" />
     <Compile Include="Unit.cs" />
-    <Compile Include="UnitMovement.cs" />
-    <Compile Include="UnitTypeAttribute.cs" />
-    <Compile Include="UnitType.cs" />
-    <Compile Include="UpgradeType.cs" />
+    <Compile Include="Enums\UnitMovement.cs" />
+    <Compile Include="PropertyGrid\UnitTypeAttribute.cs" />
+    <Compile Include="Enums\UnitType.cs" />
+    <Compile Include="Enums\UpgradeType.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
