--- a/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
+++ b/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
@@ -70,8 +70,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BW\CImage.cs" />
     <Compile Include="BW\CSprite.cs" />
     <Compile Include="BW\CUnit.cs" />
+    <Compile Include="Enums\AnimType.cs" />
+    <Compile Include="Enums\ImageType.cs" />
+    <Compile Include="Enums\RLE.cs" />
+    <Compile Include="Enums\ImageFlags.cs" />
+    <Compile Include="Enums\SpriteFlags.cs" />
     <Compile Include="Enums\UnitMovementFlags.cs" />
     <Compile Include="Enums\UnitStatusFlags.cs" />
     <Compile Include="Form1.cs">
@@ -82,6 +88,7 @@
     </Compile>
     <Compile Include="Enums\Order.cs" />
     <Compile Include="BW\Position.cs" />
+    <Compile Include="Image.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyGrid\FlagEnumEditor.cs">
