--- a/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
+++ b/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Enums\AnimType.cs" />
     <Compile Include="Enums\FlingyType.cs" />
     <Compile Include="Enums\ImageType.cs" />
+    <Compile Include="Enums\ResourceType.cs" />
     <Compile Include="Enums\RLE.cs" />
     <Compile Include="Enums\ImageFlags.cs" />
     <Compile Include="Enums\SpriteFlags.cs" />
