--- a/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
+++ b/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Enums\AnimType.cs" />
     <Compile Include="Enums\FlingyType.cs" />
     <Compile Include="Enums\ImageType.cs" />
+    <Compile Include="Enums\PlayerFlags.cs" />
     <Compile Include="Enums\ResourceType.cs" />
     <Compile Include="Enums\RLE.cs" />
     <Compile Include="Enums\ImageFlags.cs" />
@@ -94,11 +95,11 @@
     <Compile Include="Image.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertyGrid\FlagEnumEditor.cs">
+    <Compile Include="Util\FlagEnumEditor.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="PropertyGrid\PropertyGridExtension.cs" />
-    <Compile Include="PropertyGrid\PropertyGridInitialExpandedAttribute.cs" />
+    <Compile Include="Util\PropertyGridExtension.cs" />
+    <Compile Include="Util\PropertyGridInitialExpandedAttribute.cs" />
     <Compile Include="BW\Rect.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="Enums\SpriteType.cs" />
@@ -106,7 +107,7 @@
     <Compile Include="Enums\TechType.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="Enums\UnitMovement.cs" />
-    <Compile Include="PropertyGrid\UnitTypeAttribute.cs" />
+    <Compile Include="Util\UnitTypeAttribute.cs" />
     <Compile Include="Enums\UnitType.cs" />
     <Compile Include="Enums\UpgradeType.cs" />
     <EmbeddedResource Include="Form1.resx">
