--- a/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
+++ b/bwapi/BWMemoryEdit/BWMemoryEdit.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>BWMemoryEdit</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -23,12 +24,11 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -39,7 +39,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -74,6 +74,8 @@
     <Compile Include="BW\CSprite.cs" />
     <Compile Include="BW\CUnit.cs" />
     <Compile Include="BW\LongPosition.cs" />
+    <Compile Include="BW\MemoryItem.cs" />
+    <Compile Include="BW\Reference.cs" />
     <Compile Include="Enums\AnimType.cs" />
     <Compile Include="Enums\FlingyType.cs" />
     <Compile Include="Enums\ImageType.cs" />
@@ -84,34 +86,35 @@
     <Compile Include="Enums\SpriteFlags.cs" />
     <Compile Include="Enums\UnitMovementFlags.cs" />
     <Compile Include="Enums\UnitStatusFlags.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainWindow.Designer.cs">
+      <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Enums\Order.cs" />
     <Compile Include="BW\Position.cs" />
-    <Compile Include="Image.cs" />
+    <Compile Include="BW\Image.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\FlagEnumEditor.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Util\JumpToReferenceTypeEditor.cs" />
     <Compile Include="Util\PropertyGridExtension.cs" />
     <Compile Include="Util\PropertyGridInitialExpandedAttribute.cs" />
     <Compile Include="BW\Rect.cs" />
-    <Compile Include="Sprite.cs" />
+    <Compile Include="BW\Sprite.cs" />
     <Compile Include="Enums\SpriteType.cs" />
     <Compile Include="BW\Target.cs" />
     <Compile Include="Enums\TechType.cs" />
-    <Compile Include="Unit.cs" />
+    <Compile Include="BW\Unit.cs" />
     <Compile Include="Enums\UnitMovement.cs" />
     <Compile Include="Util\UnitTypeAttribute.cs" />
     <Compile Include="Enums\UnitType.cs" />
     <Compile Include="Enums\UpgradeType.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainWindow.resx">
+      <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
