Added more position unit tests and additional unit type test helpers.

--- a/bwapi/BWAPILIBTest/BWAPILIBTest.vcxproj.filters
+++ b/bwapi/BWAPILIBTest/BWAPILIBTest.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="unitTypeHelpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
