--- a/bwapi/DocumentationGen/DocumentationGen.vcxproj
+++ b/bwapi/DocumentationGen/DocumentationGen.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="unitcommandtypes.cpp" />
     <ClCompile Include="unitsizetypes.cpp" />
     <ClCompile Include="unittypes.cpp" />
+    <ClCompile Include="unittypestestgen.cpp" />
     <ClCompile Include="upgradetypes.cpp" />
     <ClCompile Include="weapontypes.cpp" />
   </ItemGroup>
