--- a/bwapi/DocumentationGen/DocumentationGen.vcxproj.filters
+++ b/bwapi/DocumentationGen/DocumentationGen.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClCompile Include="errors.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="unittypestestgen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
