--- a/bwapi/BWAPI/BWAPI.vcxproj
+++ b/bwapi/BWAPI/BWAPI.vcxproj
@@ -227,6 +227,7 @@
     <ClInclude Include="Source\BWAPI\BulletImpl.h" />
     <ClInclude Include="Source\BWAPI\BWtoBWAPI.h" />
     <ClInclude Include="Source\BWAPI\Command.h" />
+    <ClInclude Include="Source\BWAPI\CommandOptimizer.h" />
     <ClInclude Include="Source\BWAPI\CommandTemp.h" />
     <ClInclude Include="Source\BWAPI\ForceImpl.h" />
     <ClInclude Include="Source\BWAPI\GameImpl.h" />
@@ -293,6 +294,7 @@
     <ClCompile Include="Source\Assembly.cpp" />
     <ClCompile Include="Source\BWAPI\BulletImpl.cpp" />
     <ClCompile Include="Source\BWAPI\BWtoBWAPI.cpp" />
+    <ClCompile Include="Source\BWAPI\CommandOptimizer.cpp" />
     <ClCompile Include="Source\BWAPI\ForceImpl.cpp" />
     <ClCompile Include="Source\BWAPI\GameBullets.cpp" />
     <ClCompile Include="Source\BWAPI\GameCommands.cpp" />
