--- a/bwapi/BWAPI/BWAPI.vcxproj.filters
+++ b/bwapi/BWAPI/BWAPI.vcxproj.filters
@@ -244,6 +244,9 @@
     <ClInclude Include="Source\BW\Font.h">
       <Filter>BW\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\BWAPI\CommandOptimizer.h">
+      <Filter>BWAPI\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\BW\CheatType.cpp">
@@ -404,6 +407,9 @@
       <Filter>BW\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\GameUpdate.cpp">
+      <Filter>BWAPI\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\BWAPI\CommandOptimizer.cpp">
       <Filter>BWAPI\Source</Filter>
     </ClCompile>
   </ItemGroup>
