--- a/bwapi/BWAPI/BWAPI.vcxproj.filters
+++ b/bwapi/BWAPI/BWAPI.vcxproj.filters
@@ -247,6 +247,9 @@
     <ClInclude Include="Source\BWAPI\CommandOptimizer.h">
       <Filter>BWAPI\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\BWAPI\APMCounter.h">
+      <Filter>BWAPI\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\BW\CheatType.cpp">
@@ -410,6 +413,9 @@
       <Filter>BWAPI\Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\BWAPI\CommandOptimizer.cpp">
+      <Filter>BWAPI\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\BWAPI\APMCounter.cpp">
       <Filter>BWAPI\Source</Filter>
     </ClCompile>
   </ItemGroup>
