--- a/bwapi/BWAPI/BWAPI.vcxproj
+++ b/bwapi/BWAPI/BWAPI.vcxproj
@@ -224,6 +224,7 @@
     <ClInclude Include="..\Shared\Templates.h" />
     <ClInclude Include="..\Shared\TemplatesImpl.h" />
     <ClInclude Include="Source\Assembly.h" />
+    <ClInclude Include="Source\BWAPI\APMCounter.h" />
     <ClInclude Include="Source\BWAPI\BulletImpl.h" />
     <ClInclude Include="Source\BWAPI\BWtoBWAPI.h" />
     <ClInclude Include="Source\BWAPI\Command.h" />
@@ -292,6 +293,7 @@
     <ClCompile Include="..\Shared\RegionShared.cpp" />
     <ClCompile Include="..\Shared\UnitShared.cpp" />
     <ClCompile Include="Source\Assembly.cpp" />
+    <ClCompile Include="Source\BWAPI\APMCounter.cpp" />
     <ClCompile Include="Source\BWAPI\BulletImpl.cpp" />
     <ClCompile Include="Source\BWAPI\BWtoBWAPI.cpp" />
     <ClCompile Include="Source\BWAPI\CommandOptimizer.cpp" />
