--- a/bwapi/BWAPI/BWAPI.vcxproj
+++ b/bwapi/BWAPI/BWAPI.vcxproj
@@ -231,6 +231,7 @@
     <ClInclude Include="Source\BWAPI\CommandOptimizer.h" />
     <ClInclude Include="Source\BWAPI\CommandTemp.h" />
     <ClInclude Include="Source\BWAPI\ForceImpl.h" />
+    <ClInclude Include="Source\BWAPI\FPSCounter.h" />
     <ClInclude Include="Source\BWAPI\GameImpl.h" />
     <ClInclude Include="Source\BWAPI\Map.h" />
     <ClInclude Include="Source\BWAPI\PlayerImpl.h" />
@@ -298,6 +299,7 @@
     <ClCompile Include="Source\BWAPI\BWtoBWAPI.cpp" />
     <ClCompile Include="Source\BWAPI\CommandOptimizer.cpp" />
     <ClCompile Include="Source\BWAPI\ForceImpl.cpp" />
+    <ClCompile Include="Source\BWAPI\FPSCounter.cpp" />
     <ClCompile Include="Source\BWAPI\GameBullets.cpp" />
     <ClCompile Include="Source\BWAPI\GameCommands.cpp" />
     <ClCompile Include="Source\BWAPI\GameDrawing.cpp" />
