#516 Added configuration option `drop_players`

--- a/Release_Binary/Starcraft/bwapi-data/bwapi.ini
+++ b/Release_Binary/Starcraft/bwapi-data/bwapi.ini
@@ -140,3 +140,9 @@ screenshots = gif
 ; Enabling this option causes it to take effect. The value is the number of milliseconds per frame. A negative
 ; value uses the game's default speed value.
 ;speed_override = -1
+
+; drop_players = ON | OFF
+; This specifies if BWAPI should drop other players from the game when the timeout dialog reaches 0. Players 
+; usually time out when there are connection issues or their client is not responding. Setting this to OFF
+; will cause BWAPI to wait an infinite amount of time before dropping the other player.
+drop_players = ON
