--- a/Release_Binary/Starcraft/bwapi-data/bwapi.ini
+++ b/Release_Binary/Starcraft/bwapi-data/bwapi.ini
@@ -144,5 +144,5 @@ screenshots = gif
 ; drop_players = ON | OFF
 ; This specifies if BWAPI should drop other players from the game when the timeout dialog reaches 0. Players 
 ; usually time out when there are connection issues or their client is not responding. Setting this to OFF
-; will cause BWAPI to wait an infinite amount of time before dropping the other player.
+; will cause BWAPI to wait an infinite amount of time until the player reconnects.
 drop_players = ON
