--- a/bwapi/BWAPIClient/BWAPIClient.vcxproj
+++ b/bwapi/BWAPIClient/BWAPIClient.vcxproj
@@ -54,13 +54,14 @@
       <DisableSpecificWarnings>4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <StringPooling>true</StringPooling>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <ProgramDataBaseFileName>$(OutDir)BWAPIClientd.pdb</ProgramDataBaseFileName>
     </ClCompile>
     <Lib />
     <PostBuildEvent>
       <Command>COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)..\Release_Binary\lib\BWAPIClientd.lib"
-COPY /y "$(IntDir)vc$(PlatformToolsetVersion).pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPIClientd.pdb"
+COPY /y "$(OutDir)BWAPIClientd.pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPIClientd.pdb"
 COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPIClientd.lib"
-COPY /y "$(IntDir)vc$(PlatformToolsetVersion).pdb" "..\lib\BWAPIClientd.pdb"
+COPY /y "$(OutDir)BWAPIClientd.pdb" "..\lib\BWAPIClientd.pdb"
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -83,10 +84,14 @@ COPY /y "$(IntDir)vc$(PlatformToolsetVersion).pdb" "..\lib\BWAPIClientd.pdb"
       <OmitFramePointers>true</OmitFramePointers>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <ProgramDataBaseFileName>$(OutDir)BWAPIClient.pdb</ProgramDataBaseFileName>
     </ClCompile>
     <PostBuildEvent>
       <Command>COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)..\Release_Binary\lib\BWAPIClient.lib"
-COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPIClient.lib"</Command>
+COPY /y "$(OutDir)BWAPIClient.pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPIClient.pdb"
+COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPIClient.lib"
+COPY /y "$(OutDir)BWAPIClient.pdb" "..\lib\BWAPIClient.pdb"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
