--- a/bwapi/BWAPILIB/BWAPILIB.vcxproj
+++ b/bwapi/BWAPILIB/BWAPILIB.vcxproj
@@ -59,6 +59,7 @@
       <WholeProgramOptimization>true</WholeProgramOptimization>
       <DisableLanguageExtensions>true</DisableLanguageExtensions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <ProgramDataBaseFileName>$(OutDir)BWAPI.pdb</ProgramDataBaseFileName>
     </ClCompile>
     <PreLinkEvent>
       <Message>Copying include files, BWAPILIB project, and example projects to final release</Message>
@@ -97,7 +98,10 @@ XCOPY "$(SolutionDir)Shared\*.h" "$(SolutionDir)..\Release_Binary\Shared" /S /C 
     <PostBuildEvent>
       <Message>Copying BWAPI library to Developer folder</Message>
       <Command>COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)..\Release_Binary\lib\BWAPI.lib"
-COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPI.lib"</Command>
+COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPI.lib"
+COPY /y "$(OutDir)BWAPI.pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPI.pdb"
+COPY /y "$(OutDir)BWAPI.pdb" "..\lib\BWAPI.pdb"
+</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -110,13 +114,13 @@ COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPI.lib"</Command>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
-      <ProgramDataBaseFileName>$(OutDir)BWAPId.pdb</ProgramDataBaseFileName>
       <WarningLevel>Level4</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <PreprocessorDefinitions>NOMINMAX;WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>4480</DisableSpecificWarnings>
       <DisableLanguageExtensions>true</DisableLanguageExtensions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <ProgramDataBaseFileName>$(OutDir)BWAPId.pdb</ProgramDataBaseFileName>
     </ClCompile>
     <PreLinkEvent>
       <Message>Copying include files, BWAPILIB project, and example projects to final release</Message>
