Updated project settings.
- Fixed compilation.
- Fixed the svnrev to the same value as 3.7.4 for maximum compatibility.
- Removed unnecessary projects and files.
- Included BWTA library.

--- a/bwapi/BWAPI_MPQDraftInjector/BWAPI_MPQDraftInjector.vcproj
+++ b/bwapi/BWAPI_MPQDraftInjector/BWAPI_MPQDraftInjector.vcproj
@@ -26,8 +26,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Updating revision information"
-				CommandLine="cd &quot;$(SolutionDir)&quot;&#x0D;&#x0A;$(SolutionDir)\revisionUpdate.bat&#x0D;&#x0A;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -109,8 +108,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Updating revision information"
-				CommandLine="cd &quot;$(SolutionDir)&quot;&#x0D;&#x0A;$(SolutionDir)\revisionUpdate.bat&#x0D;&#x0A;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
