--- a/bwapi/BWAPI/BWAPI.vcproj
+++ b/bwapi/BWAPI/BWAPI.vcproj
@@ -26,8 +26,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Updating revision information"
-				CommandLine="cd &quot;$(SolutionDir)&quot;&#x0D;&#x0A;$(SolutionDir)\revisionUpdate.bat&#x0D;&#x0A;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -97,8 +96,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Copying BWAPId.dll to ChaosDir"
-				CommandLine="COPY /Y &quot;$(SolutionDir)..\Release_Binary\Chaoslauncher\$(ProjectName)d.dll&quot; &quot;$(ChaosDir)&quot;"
+				CommandLine=""
 			/>
 		</Configuration>
 		<Configuration
@@ -112,8 +110,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Updating revision information"
-				CommandLine="cd &quot;$(SolutionDir)&quot;&#x0D;&#x0A;$(SolutionDir)\revisionUpdate.bat&#x0D;&#x0A;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -190,8 +187,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Copying BWAPI.dll to ChaosDir"
-				CommandLine="COPY /Y &quot;$(SolutionDir)..\Release_Binary\Chaoslauncher\$(ProjectName).dll&quot; &quot;$(ChaosDir)&quot;"
+				CommandLine=""
 			/>
 		</Configuration>
 	</Configurations>
