--- a/bwapi/BWAPI_ChaosLauncherInjector/BWAPI_ChaosLauncherInjector.vcproj
+++ b/bwapi/BWAPI_ChaosLauncherInjector/BWAPI_ChaosLauncherInjector.vcproj
@@ -27,8 +27,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Updating revision information"
-				CommandLine="cd &quot;$(SolutionDir)&quot;&#x0D;&#x0A;$(SolutionDir)\revisionUpdate.bat&#x0D;&#x0A;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -99,8 +98,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Copying ChaosLauncherInjector to ChaosDir"
-				CommandLine="COPY /Y &quot;$(SolutionDir)..\Release_Binary\Chaoslauncher\$(ProjectName).bwl&quot; &quot;$(ChaosDir)&quot;"
+				CommandLine=""
 			/>
 		</Configuration>
 		<Configuration
@@ -113,8 +111,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Updating revision information"
-				CommandLine="cd &quot;$(SolutionDir)&quot;&#x0D;&#x0A;$(SolutionDir)\revisionUpdate.bat&#x0D;&#x0A;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -181,8 +178,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Copying ChaosLauncherInjector to ChaosDir"
-				CommandLine="COPY /Y &quot;$(SolutionDir)..\Release_Binary\Chaoslauncher\$(ProjectName)d.bwl&quot; &quot;$(ChaosDir)&quot;"
+				CommandLine=""
 			/>
 		</Configuration>
 	</Configurations>
