--- a/bwapi/BWAPI/BWAPI.vcxproj
+++ b/bwapi/BWAPI/BWAPI.vcxproj
@@ -231,6 +231,7 @@ popd</Command>
     <ClInclude Include="..\Shared\TemplatesImpl.h" />
     <ClInclude Include="Source\Assembly.h" />
     <ClInclude Include="Source\BWAPI\APMCounter.h" />
+    <ClInclude Include="Source\BWAPI\AutoMenuManager.h" />
     <ClInclude Include="Source\BWAPI\BulletImpl.h" />
     <ClInclude Include="Source\BWAPI\BWtoBWAPI.h" />
     <ClInclude Include="Source\BWAPI\Command.h" />
@@ -301,6 +302,7 @@ popd</Command>
     <ClCompile Include="..\Shared\UnitShared.cpp" />
     <ClCompile Include="Source\Assembly.cpp" />
     <ClCompile Include="Source\BWAPI\APMCounter.cpp" />
+    <ClCompile Include="Source\BWAPI\AutoMenuManager.cpp" />
     <ClCompile Include="Source\BWAPI\BulletImpl.cpp" />
     <ClCompile Include="Source\BWAPI\BWtoBWAPI.cpp" />
     <ClCompile Include="Source\BWAPI\CommandOptimizer.cpp" />
