--- a/bwapi/BWAPI/BWAPI.vcxproj.filters
+++ b/bwapi/BWAPI/BWAPI.vcxproj.filters
@@ -253,6 +253,9 @@
     <ClInclude Include="Source\BWAPI\FPSCounter.h">
       <Filter>BWAPI\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\BWAPI\AutoMenuManager.h">
+      <Filter>BWAPI\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\BW\CheatType.cpp">
@@ -422,6 +425,9 @@
       <Filter>BWAPI\Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\BWAPI\FPSCounter.cpp">
+      <Filter>BWAPI\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\BWAPI\AutoMenuManager.cpp">
       <Filter>BWAPI\Source</Filter>
     </ClCompile>
   </ItemGroup>
