--- a/bwapi/BWAPILIB/BWAPILIB.vcxproj
+++ b/bwapi/BWAPILIB/BWAPILIB.vcxproj
@@ -59,7 +59,7 @@
       <WholeProgramOptimization>true</WholeProgramOptimization>
       <DisableLanguageExtensions>true</DisableLanguageExtensions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <ProgramDataBaseFileName>$(OutDir)BWAPI.pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>$(OutDir)BWAPILib.pdb</ProgramDataBaseFileName>
     </ClCompile>
     <PreLinkEvent>
       <Message>Copying include files, BWAPILIB project, and example projects to final release</Message>
@@ -99,8 +99,8 @@ XCOPY "$(SolutionDir)Shared\*.h" "$(SolutionDir)..\Release_Binary\Shared" /S /C 
       <Message>Copying BWAPI library to Developer folder</Message>
       <Command>COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)..\Release_Binary\lib\BWAPI.lib"
 COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPI.lib"
-COPY /y "$(OutDir)BWAPI.pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPI.pdb"
-COPY /y "$(OutDir)BWAPI.pdb" "..\lib\BWAPI.pdb"
+COPY /y "$(OutDir)BWAPILib.pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPILib.pdb"
+COPY /y "$(OutDir)BWAPILib.pdb" "..\lib\BWAPILib.pdb"
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -120,7 +120,7 @@ COPY /y "$(OutDir)BWAPI.pdb" "..\lib\BWAPI.pdb"
       <DisableSpecificWarnings>4480</DisableSpecificWarnings>
       <DisableLanguageExtensions>true</DisableLanguageExtensions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <ProgramDataBaseFileName>$(OutDir)BWAPId.pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>$(OutDir)BWAPILibd.pdb</ProgramDataBaseFileName>
     </ClCompile>
     <PreLinkEvent>
       <Message>Copying include files, BWAPILIB project, and example projects to final release</Message>
@@ -160,8 +160,8 @@ XCOPY "$(SolutionDir)Shared\*.h" "$(SolutionDir)..\Release_Binary\Shared" /S /C 
       <Message>Copying BWAPI library to Developer folder</Message>
       <Command>COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)..\Release_Binary\lib\BWAPId.lib"
 COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPId.lib"
-COPY /y "$(OutDir)BWAPId.pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPId.pdb"
-COPY /y "$(OutDir)BWAPId.pdb" "..\lib\BWAPId.pdb"
+COPY /y "$(OutDir)BWAPId.pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPILibd.pdb"
+COPY /y "$(OutDir)BWAPId.pdb" "..\lib\BWAPILibd.pdb"
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
