Fixed issue with pdb copy.

--- a/bwapi/BWAPILIB/BWAPILIB.vcxproj
+++ b/bwapi/BWAPILIB/BWAPILIB.vcxproj
@@ -160,8 +160,8 @@ XCOPY "$(SolutionDir)Shared\*.h" "$(SolutionDir)..\Release_Binary\Shared" /S /C 
       <Message>Copying BWAPI library to Developer folder</Message>
       <Command>COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)..\Release_Binary\lib\BWAPId.lib"
 COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPId.lib"
-COPY /y "$(OutDir)BWAPId.pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPILibd.pdb"
-COPY /y "$(OutDir)BWAPId.pdb" "..\lib\BWAPILibd.pdb"
+COPY /y "$(OutDir)BWAPILibd.pdb" "$(SolutionDir)..\Release_Binary\lib\BWAPILibd.pdb"
+COPY /y "$(OutDir)BWAPILibd.pdb" "..\lib\BWAPILibd.pdb"
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
