Separated structures from offsets.
Removed a trigger action hook and offset.

--- a/bwapi/BWAPI/BWAPI.vcxproj
+++ b/bwapi/BWAPI/BWAPI.vcxproj
@@ -272,6 +272,7 @@ popd</Command>
     <ClInclude Include="Source\BW\PositionUnitTarget.h" />
     <ClInclude Include="Source\BW\CSprite.h" />
     <ClInclude Include="Source\BW\Render.h" />
+    <ClInclude Include="Source\BW\Structures.h" />
     <ClInclude Include="Source\BW\Target.h" />
     <ClInclude Include="Source\BW\TileSet.h" />
     <ClInclude Include="Source\BW\TileType.h" />
