auto_menu: added bwapi.ini option character_name

--- a/Release_Binary/Starcraft/bwapi-data/bwapi.ini
+++ b/Release_Binary/Starcraft/bwapi-data/bwapi.ini
@@ -17,6 +17,12 @@ tournament =
 ; for replays, just set the map to the path of the replay file
 auto_menu = OFF
 
+; character_name = FIRST | WAIT | <other>
+; if FIRST (default), use the first character in the list
+; if WAIT, stop at this screen
+; else the character with the given value is used/created
+character_name = FIRST
+
 ; pause_dbg = ON | OFF
 ; This specifies if auto_menu will pause until a debugger is attached to the process.
 ; Only works in DEBUG mode.
