auto_menu: added game_type_extra option to bwapi.ini
e.g. for selecting 2 vs 2 for game_type TOP_VS_BOTTOM or 7500 for GREED

--- a/Release_Binary/Starcraft/bwapi-data/bwapi.ini
+++ b/Release_Binary/Starcraft/bwapi-data/bwapi.ini
@@ -74,6 +74,17 @@ enemy_race_7 = Default
 ;           | GREED | SLAUGHTER | SUDDEN_DEATH | TEAM_MELEE | TEAM_FREE_FOR_ALL | TEAM_CAPTURE_THE_FLAG
 game_type = MELEE
 
+; game_type_extra = Text that appears in the drop-down list below the Game Type drop-down list.
+; If empty, the Starcraft default will be used.
+; The following are the game types that use this setting, and corresponding example values
+;   TOP_VS_BOTTOM          3 vs 1 | 2 vs 2 | 1 vs 3 | # vs #
+;   GREED                  2500 | 5000 | 7500 | 10000
+;   SLAUGHTER              15 | 30 | 45 | 60
+;   TEAM_MELEE             2 | 3 | 4 | 5 | 6 | 7 | 8
+;   TEAM_FREE_FOR_ALL      2 | 3 | 4 | 5 | 6 | 7 | 8
+;   TEAM_CAPTURE_THE_FLAG  2 | 3 | 4 | 5 | 6 | 7 | 8
+game_type_extra =
+
 ; save_replay = path to save replay to
 ; Accepts all environment variables including custom variables. See wiki for more info.
 save_replay = maps/replays/%BOTNAME6%/$Y $b $d/%MAP%_%BOTRACE%%ALLYRACES%vs%ENEMYRACES%_$H$M$S.rep
