--- a/bwapi/BWAPI/BWAPI.vcxproj.filters
+++ b/bwapi/BWAPI/BWAPI.vcxproj.filters
@@ -428,4 +428,7 @@
       <Filter>BWAPI\Source</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
