Added documentation to bwapi.ini to highlight usage of different races per AI module

--- a/Release_Binary/Starcraft/bwapi-data/bwapi.ini
+++ b/Release_Binary/Starcraft/bwapi-data/bwapi.ini
@@ -56,6 +56,11 @@ game =
 mapiteration = RANDOM
 
 ; race = Terran | Protoss | Zerg | Random
+;   - Use commas to specify race for each AI module when running multiple instances.
+;   - If there are more instances than the amount of 
+;         races specified, then the last entry is used.
+;	- To be used in conjunction with multiple AI modules
+;   - Example: Terran, Protoss, Terran, Zerg
 race = Terran
 
 ; enemy_count = 1-7, for 1v1 games, set enemy_count = 1
