fixed output streams not compiling
(The streams are: bwout. bwerr, out, err)
Fixed by moving their definition from bwapi.dll to bwapilib. This will mean that the AI modules have their own instantiation of the streams, which may actually be desirable although not standard, e.g. std::cout is shared across all dlls.

To decouple the BroodwarOutputDevice from BW, a fixed array was generated and stored in BroodwarOutputDevice.cpp.

Removed openConsole() functions from the public interface, because they should probably not have been public to begin with. This will force everyone to use the console_* configuration variables in bwapi.ini for modifying console behavior.

Re-enabled language extensions (Property Pages > C/C++ > Language) in BWAPILIB to work around the following error:
```
Error	C2694	'boost::iostreams::detail::stream_base<Device,Tr,Alloc,std::basic_ostream<char,std::char_traits<char>>>::~stream_base(void)': overriding virtual function has less restrictive exception specification than base class virtual member function 'std::basic_ostream<char,std::char_traits<char>>::~basic_ostream(void) throw()'	BWAPILIB	C:\tm\bwapi\bwapi\packages\boost.1.59.0.0\lib\native\include\boost\iostreams\stream.hpp	85
```
see http://stackoverflow.com/questions/12764151/vc-2012-and-boost-incompatibility-throw-specifications-in-library-header/12773189#12773189 for more info.

--- a/bwapi/BWAPI/BWAPI.vcxproj
+++ b/bwapi/BWAPI/BWAPI.vcxproj
@@ -226,7 +226,6 @@ popd</Command>
     <ClInclude Include="..\include\BWAPI\Interface.h" />
     <ClInclude Include="..\include\BWAPI\Player.h" />
     <ClInclude Include="..\include\BWAPI\Region.h" />
-    <ClInclude Include="..\include\BWAPI\Streams.h" />
     <ClInclude Include="..\include\BWAPI\Unit.h" />
     <ClInclude Include="..\Shared\Templates.h" />
     <ClInclude Include="Source\Assembly.h" />
@@ -237,6 +236,7 @@ popd</Command>
     <ClInclude Include="Source\BWAPI\Command.h" />
     <ClInclude Include="Source\BWAPI\CommandOptimizer.h" />
     <ClInclude Include="Source\BWAPI\CommandTemp.h" />
+    <ClInclude Include="Source\BWAPI\Console.h" />
     <ClInclude Include="Source\BWAPI\ForceImpl.h" />
     <ClInclude Include="Source\BWAPI\FPSCounter.h" />
     <ClInclude Include="Source\BWAPI\GameImpl.h" />
@@ -307,6 +307,7 @@ popd</Command>
     <ClCompile Include="Source\BWAPI\BulletImpl.cpp" />
     <ClCompile Include="Source\BWAPI\BWtoBWAPI.cpp" />
     <ClCompile Include="Source\BWAPI\CommandOptimizer.cpp" />
+    <ClCompile Include="Source\BWAPI\Console.cpp" />
     <ClCompile Include="Source\BWAPI\ForceImpl.cpp" />
     <ClCompile Include="Source\BWAPI\FPSCounter.cpp" />
     <ClCompile Include="Source\BWAPI\GameBullets.cpp" />
@@ -321,7 +322,6 @@ popd</Command>
     <ClCompile Include="Source\BWAPI\PlayerImpl.cpp" />
     <ClCompile Include="Source\BWAPI\RegionImpl.cpp" />
     <ClCompile Include="Source\BWAPI\Server.cpp" />
-    <ClCompile Include="Source\BWAPI\Streams.cpp" />
     <ClCompile Include="Source\BWAPI\UnitImpl.cpp" />
     <ClCompile Include="Source\BWAPI\UnitUpdate.cpp" />
     <ClCompile Include="Source\BW\Bitmap.cpp" />
